--- a/src/quizRender/templates/take_quiz_elements/agree_disagree_table.html
+++ b/src/quizRender/templates/take_quiz_elements/agree_disagree_table.html
@@ -48,7 +48,7 @@
         </thead>
 
 
-        {% for question in  element.get_element_type.element.get_agree_disagree_rows %}
+        {% for question in  element.get_element_type.element.get_rows %}
             {% include 'take_quiz_elements/agree_disagree_row.html' %}
         {% endfor %}
 
