--- a/src/templates/home_site2/register.html
+++ b/src/templates/home_site2/register.html
@@ -7,13 +7,13 @@
             <!-- ============================================================== -->
     <title>Register - {{site.site_name}}  </title>
 
-    <div class="d-flex flex-column min-vh-100 px-3 pt-4">
+    <div class="d-flex flex-column min-vh-100 px-3">
         <div class="row justify-content-center">
             <div class="col-md-8 col-lg-6 col-xl-5">
 
-                <div class="card">
+                <div class="card border border-dark border-3">
                     <div class="card-body p-4">
-                        <div class="text-center mt-2">
+                        <div class="text-center ">
                             <h5>Register</h5>
                             <p class="text-muted">Sign up below</p>
                         </div>
