--- a/src/quizCreation/templates/quiz_page_elements.html
+++ b/src/quizCreation/templates/quiz_page_elements.html
@@ -66,7 +66,7 @@
                                       hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
                                       hx-post="{% url 'edit_element_title' element.element.page_element.page.quiz.id element.element.page_element.page.id element.element.page_element.id %}"
 
-                                      {% if element.type == "Multiple choice question" or  element.type == 'Single choice question' or element.type == 'Agree disagree table' %}
+                                      {% if element.type == "Multiple choice question" or  element.type == 'Single choice question' or element.type == 'Agree disagree table' or element.type == 'Satisfied unsatisfied table' %}
                                           hx-target="#editModalContent{{element.element.page_element.id}}"
                                       {% else %}
                                           hx-target="#page_elements"
@@ -116,7 +116,7 @@
                                         >Cancel</a>
                                         <button
 
-                                            {% if not element.type == "Multiple choice question" and not element.type == "Single choice question" and not element.type == "Agree disagree table" %}
+                                            {% if not element.type == "Multiple choice question" and not element.type == "Single choice question" and not element.type == "Agree disagree table" and not element.type == "Satisfied unsatisfied table" %}
 
                                                 onclick="document.querySelector('#editModal_{{element.element.page_element.id}} > div:nth-child(1) > div:nth-child(1) > div:nth-child(1) > button:nth-child(2)').click()"
                                             {% endif %}
