--- a/src/quizCreation/templates/questions_page.html
+++ b/src/quizCreation/templates/questions_page.html
@@ -106,9 +106,15 @@
             </div>
             <div class="card-body tab-content pt-2">
                 <div class="tab-pane active show fade" id="Unifinshed">
+                    <h4>Quiz pages</h4>
                     {% for page in quiz_pages %}
 
-                        <div class=" rounded shadow-lg my-5  " style="background-color:rgba(227, 227, 204, 0.3)">
+                        <div class=" rounded shadow-lg my-5 border  border-3 " style="border-color:#1ea7c5 !important;
+                        border: 1px solid;
+                        border-radius: 1.25rem;
+                        -webkit-transition: all 0.5s;
+                        -ms-transition: all 0.5s;
+                        transition: all 0.5s;">
 
 
                             <div  class="d-flex  flex-wrap py-3 list-row align-items-center mb-2">
